styles/Home.module.css
/*About page styles*/
.aboutContent {
  display: flex;
  /* border: 1px solid red; */
  justify-content: center;
  align-items: center;
  
}

.aboutCard {
  display: flex;
  background-color: #b2b2b2;
  background-color: rgba(0, 0, 0, .3);
  /* border: 1px solid black; */
  height: 80vh;
  width: 80vw;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  padding: 1rem;
}

.aboutImageContainer{
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 1px solid blue; */
  justify-content: space-around;
  height: 40vh;
}

.aboutImageItem{
  display: flex;
  border-radius: 50%;
  height: 15rem;
  width: 15rem;
  /* border: 1px solid red; */
}

.aboutNameItem{
  font-size: 3vh;
}

.aboutNavbarLogoItem{
  cursor: pointer;
}

.aboutSocialMediaContainer{
  display: flex;
  /* border: 1px solid red; */
  width: 10rem;
  justify-content: space-around;
}


.aboutDonationItem{
  display: flex;
  /* border: 1px solid red; */
  width: 15rem;
  height: 10rem;
  border-radius: 5%;
  cursor: pointer;
}



/*Index page styles*/
.indexContentContainer{
  display: flex;
  flex-direction: column;
  
}

.indexTitleContainer {
  /* border: 1px solid green; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 45vh;
  margin-top: -5rem;
}

.indexTitleItem {
  font-size: 7vw;
  color: white;
}

.indexSubTitleItem {
  font-size: 2vw;
  color: white;
}

.indexButtonContainer {
  display: flex;
  /* border: 1px solid red; */
  justify-content: center;
}

.indexButtonItem{
  border: 1px solid white;
  height: 6vh;
  width: 8rem;
  font-size: 1.1rem;
  border-radius: 5px;
}

.indexButtonItem:hover{
  background-color: white;
  color: black;
}


@media all and (max-width:30em) {

  .indexTitleItem {
      font-size: 10vw;
  }

  .indexSubTitleItem {
      font-size: 3vw;
  }

  .indexTitleContainer{
    height: 27vh;
  }
}


/*Negative page styles*/
.negativeContent {
  display: flex;
  /* border: 1px solid red; */
  justify-content: center;
  align-items: center;
}

.negativeCard {
  display: flex;
  background-color: #b2b2b2;
  background-color: rgba(0, 0, 0, .3);
  /* border: 1px solid black; */
  height: 80vh;
  width: 80vw;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  border-radius: 5px;
}

.negativeSymbolContainer{
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 1px solid blue; */
  justify-content: center;
  height: 40vh;
  width: 80vw;
}

.negativeSymbolItem{
  display: flex;
  border-radius: 50%;
  height: 15rem;
  width: 15rem;
  /* border: 1px solid red; */
}

.negativeNameItem{
  font-size: 3vh;
  margin-top: 1.5vh;
}

.negativeDetailsContainer{
  display: flex;
  /* border: 1px solid red; */
  height: 25vh;
  width: 80vw;
  justify-content: space-evenly;
  align-items: center;
}

.negativeLowerSection{
  display: flex;
  /* border: 1px solid green; */
  flex-direction: column;
  align-items: center;
  height: 30vh
}

.negativeSymptomsContainer{
  display: flex;
  border: 1px solid white;
  width: 35vw;
  height: 17vh;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 5px;
}

.negativeContactsContainer{
  display: flex;
  border: 1px solid white;
  width: 35vw;
  height: 17vh;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 5px;
}

.negativeContactsContainer:hover{
  background-color: white;
  color: black;
  cursor: pointer;
}

.negativeSymptomsContainer:hover{
  background-color: white;
  color: black;
  cursor: pointer;
}

.negativeButtonItem{
  border: 1px solid white;
  height: 6vh;
  width: 8rem;
  font-size: 1.1rem;
  border-radius: 5px;
}

.negativeButtonItem:hover{
  background-color: white;
  color: black;
}


/*Positive page styles*/
.positiveContent {
  display: flex;
  /* border: 1px solid red; */
  justify-content: center;
  align-items: center;
}

.positiveCard {
  display: flex;
  background-color: #b2b2b2;
  background-color: rgba(0, 0, 0, .3);
  /* border: 1px solid black; */
  height: 80vh;
  width: 80vw;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 1rem;
  border-radius: 5px;
}

.positiveSymbolContainer{
  display: flex;
  flex-direction: column;
  align-items: center;
  /* border: 1px solid blue; */
  justify-content: center;
  height: 40vh;
  width: 80vw;
}

.positiveSymbolItem{
  display: flex;
  border-radius: 50%;
  height: 15rem;
  width: 15rem;
  /* border: 1px solid red; */
}

.positiveNameItem{
  font-size: 3vh;
}

.positiveDetailsContainer{
  display: flex;
  /* border: 1px solid red; */
  height: 25vh;
  width: 80vw;
  justify-content: space-evenly;
  align-items: center;
}

.positiveLowerSection{
  display: flex;
  /* border: 1px solid green; */
  flex-direction: column;
  align-items: center;
  height: 30vh
}

.positiveSymptomsContainer{
  display: flex;
  border: 1px solid white;
  width: 35vw;
  height: 17vh;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 5px;
}

.positiveContactsContainer{
  display: flex;
  border: 1px solid white;
  width: 35vw;
  height: 17vh;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  border-radius: 5px;
}

.positiveContactsContainer:hover{
  background-color: white;
  color: black;
  cursor: pointer;
}

.positiveSymptomsContainer:hover{
  background-color: white;
  color: black;
  cursor: pointer;
}

.positiveButtonItem{
  border: 1px solid white;
  height: 6vh;
  width: 8rem;
  font-size: 1.1rem;
  border-radius: 5px;
}

.positiveButtonItem:hover{
  background-color: white;
  color: black;
}



/*Layout page styles*/
.layoutNavbar{
  display: flex;
  /* border: 1px solid red; */
  height: 10vh;
  color: white;
  justify-content: space-between;
  align-items: center;
  font-size: 2vh;
}

.layoutNavbarItems{
  display: flex;
  justify-content: space-between;
  /* border: 1px solid purple; */
  width: 100vw;
  padding: 3rem;
}

.layoutNavbarSubItems{
  display: flex;
  justify-content: space-between;
  /* border: 1px solid black; */
  width: 8vw;
}


.layoutContent{
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
  /* border: 1px solid blue; */
  height: 90vh;
  overflow: none;
}

.layoutNavbarLogoItem{
  cursor: pointer;
}


.uploadContent{
  /* border: 1px solid blue; */
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  
}

.uploadButtonItem {
  display: inline-block;
  padding: 0.35rem 1.2rem;
  border: 0.1rem solid #FFFFFF;
  margin: 0 0.3rem 0.3rem 0;
  border-radius: 0.12rem;
  box-sizing: border-box;
  text-decoration: none;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  color: #FFFFFF;
  text-align: center;
  /* transition: all 0.2s; */
  font-size: 3vh;
  margin-top: 5vh;
  border-radius: 5px;
}

.uploadButtonItem:hover {
  color: #000000;
  background-color: #FFFFFF;
}


.uploadMainContent{
  /* border: 1px solid red; */
  display: flex;
  flex-direction: column;
  margin-top: -5rem;
}

.uploadInputItem{
  display: none;
}


@media all and (max-width:30em) {
  

  .uploadTitleItem {
      font-size: 10vw;
  }

  .uploadSubTitleItem {
      font-size: 3vw;
  }
}

.effect-1,
.effect-2,
.effect-3 {
    overflow: hidden;
}

.page {
    background: white;
    z-index: 1;
    min-height: 100vh;
    padding: 4rem 0;
}

.effect-3::after {
    content: "";
    display: block;
    position: fixed;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: linear-gradient(135deg,
            hsla(0, 100%, 76%, 1) 0%,
            hsla(237, 100%, 73%, 1) 100%);
    z-index: -1;
}

.cover {
  background: url("/public/images/buymecoffe.jpeg") no-repeat scroll center center #FFF;
  position:fixed;
  width:100%;
  height: 100%;
  left:0;right:0;top:0;bottom:0;
  background-color: rgba(255,255,255,0.5);
  backdrop-filter: blur(5px);
  z-index:9999;
  display: none;
}

